--- a/left.html
+++ b/left.html
@@ -1,17 +1,19 @@
-<html><head>
-<title>¿ÞÂÊÆäÀÌÁö
+<!doctype html.
+<html lang="ko"><head>
+<meta charset="UTF-8">
+<title>ì™¼ìª½íŽ˜ì´ì§€
 </title></head>
 <body bgcolor=#99FFFF>
 <a href=right1.html target=right>
-ÇÁ·Î±×·¡¹Ö/ÄÄÇ»ÅÍ°øÇÐ ÇÐ°ú
+í”„ë¡œê·¸ëž˜ë°/ì»´í“¨í„°ê³µí•™ í•™ê³¼
 </a>
 <p>
 <a href=right2.html target=right>
-°ÔÀÓÇÁ·Î±×·¡¸Ó¶õ?
+ê²Œìž„í”„ë¡œê·¸ëž˜ë¨¸ëž€?
 </a>
 <p>
 <a href=right3.html target=right>
-³»°¡ µÇ°í ½ÍÀº ÀÌÀ¯
+ë‚´ê°€ ë˜ê³  ì‹¶ì€ ì´ìœ 
 </a>
 </body>
 </html>
